# CHS-CSB-Processing

./: .gitignore  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLI.bat  CONFIG_data_transformation.toml  LICENSE  README.en.md  README.fr.md  README.md  config.html  example_iwls_api_request.html  example_iwls_api_request.py  example_parser.html  example_parser.py  example_tide.html  example_tide.py  example_vessel.py  genindex.html  ingestion.html  iwls_API_config.toml  iwls_api_request.api.html  modules.html  py-modindex.html  pyproject.toml  requirements.txt  run_WebUI.bat  schema.html  search.html  searchindex.js  tide.time_serie.html  tide.voronoi.html
.doctrees/: example_parser.doctree  example_vessel.doctree  index.doctree  transformation.doctree  vessel.doctree
_modules/: example_iwls_api_request.html  example_parser.html  index.html
_sources/: example_iwls_api_request.rst.txt  example_parser.rst.txt  ingestion.rst.txt
_static/: documentation_options.js
config/: data_config.py  iwls_api_config.py
ingestion/: factory_parser.py  parser_abc.py  parser_dcdb.py  parser_exception.py  parser_ids.py  parser_lowrance.py  parser_ofm.py  schema.py  warning_capture.py
iwls_api_request/: __init__.py  api_facade.py
schema/: __init__.py  model_ids.py
source/: conf.py  config.rst  iwls_api_request.api.rst  tide.stations.rst
src/: CONFIG_csb-processing.toml  CONFIG_iwls_API.toml  CONFIG_vessels.json  cli.py  converter.py  csb_processing.py  example_iwls_api_request.py  example_parser.py  example_processing.py  example_tide.py  example_vessel.py  example_wlz.py  iwls_api.py  web_ui.py
tide/: export.py  plot.py  schema.py
transformation/: data_cleaning.py  transformation_models.py
vessel/: TCSB_VESSELSLIST.json  __init__.py  exception_vessel.py  vessel_config.py  (+5 more)
(+254 files in other folders)
