[tool.poetry]
name = "csb-processing"
version = "0.0.1"
description = "Datalogger processing"
authors = ["Yan Bilodeau <yan.bilodeau@dfo-mpo.gc.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
geopandas = "^1.0.1"
pandas = "^2.2.3"
pydantic = "^2.9.2"
loguru = "^0.7.2"
pytz = "^2024.2"
cachetools = "^5.5.0"
geopy = "^2.4.1"
requests-cache = "^1.2.1"
plotly = "^5.24.1"
dask-geopandas = "^0.4.2"
pandera = "^0.20.4"
diskcache = "^5.6.3"
toml = "^0.10.2"
numpy = "^1.26.3"
scipy = "^1.14.1"
tenacity = "^9.0.0"
shapely = "^2.0.6"
python-dateutil = "^2.9.0"
click = "^8.1.7"
sqlalchemy = "^2.0.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
