[project]
name = "chs-csb-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.2.1",
    "click>=8.3.0",
    "dask-geopandas>=0.5.0",
    "diskcache>=5.6.3",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "kaleido>=1.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "nicegui>=3.2.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandera>=0.26.1",
    "plotly>=6.4.0",
    "pydantic>=2.12.4",
    "pynmea2>=1.19.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pywebview>=6.1",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-click>=6.1.0",
    "sphinx-intl>=2.3.2",
    "sphinx-rtd-theme>=3.0.2",
    "sqlalchemy>=2.0.44",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
    "uvicorn>=0.38.0",
]
